# football-info-api

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: checks.yaml
football_api/: manage.py
football_api/football_api/: settings.py
football_service/: conftest.py
football_service/core/: admin.py  models.py
football_service/core/management/commands/: wait_for_db.py
football_service/core/migrations/: 0001_initial.py
football_service/core/tests/: test_admin.py  test_commands.py  test_models.py
football_service/football_api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
football_service/schemas/user/: openapi.yaml
football_service/templates/: openapi.html
football_service/user/: serializers.py  urls.py  views.py
football_service/user/tests/: test_token_api.py  test_user_api.py
football_service/utils/test_utils/: test_client.py
